--- a/css/main.css
+++ b/css/main.css
@@ -7,3 +7,14 @@
   margin: 10px;
 
 }
+
+fieldset {
+  display: block;
+  margin-inline-start: 2px;
+  margin-inline-end: 2px;
+  padding-block-start: 0.35em;
+  padding-inline-start: 0.75em;
+  padding-inline-end: 0.75em;
+  padding-block-end: 0.625em;
+  border-width: 2px;
+}
